# actix-backend

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 001_create_tables.sql
migrations/2023-07-30-225403_create_tables/: down.sql  up.sql
migrations/2023-07-30-225409_create_teams/: down.sql  up.sql
migrations/2023-07-30-225412_create_players/: down.sql  up.sql
migrations/2023-07-30-225421_create_cards/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  models_dao.rs  primitives.rs  routes.rs  schema.rs  services.rs  utils.rs
src/dao/: card_dao.rs  mod.rs  player_dao.rs  rounds_dao.rs  table_dao.rs  team_dao.rs
src/models/: card.rs  mod.rs  player.rs  projections.rs  round.rs  suit.rs  table.rs  team.rs
src/services/: mod.rs  table_service.rs
tests/: models_dao_tests.rs  services_tests.rs
